--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -129,7 +129,7 @@
             <i class="fas fa-envelope text-green-600 mr-3 mt-1"></i>
             <div>
               <p class="text-sm font-medium text-gray-700">Email</p>
-              <p class="text-sm text-gray-600">support@pulseconnect.com</p>
+              <p class="text-sm text-gray-600">pulseconnecthub@gmail.com</p>
             </div>
           </div>
           <div class="flex items-start">
@@ -143,7 +143,7 @@
             <i class="fas fa-map-marker-alt text-green-600 mr-3 mt-1"></i>
             <div>
               <p class="text-sm font-medium text-gray-700">Address</p>
-              <p class="text-sm text-gray-600">123 Pulse Street, Johannesburg, Gauteng, South Africa</p>
+              <p class="text-sm text-gray-600">University of Pretoria, Hatfield0, South Africa</p>
             </div>
           </div>
         </div>
