--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -847,7 +847,7 @@
           <div class="absolute inset-0 bg-gradient-to-t from-black/60 via-black/20 to-transparent flex items-end p-4">
             <div>
               <h3 class="text-xl font-bold text-white">Tshephang</h3>
-              <p class="text-yellow-300 font-medium">Software Developer</p>
+              <p class="text-yellow-300 font-medium">Software Engineer</p>
             </div>
           </div>
         </div>
